changed S to chisq2S. updated notes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(F)
 export(Finv)
-export(S)
 export(S2d)
+export(chisq2S)
 export(ncc.ci.central)
+export(ncc.ci.mdb)
+export(ncc.ci.mdr)
 export(ncc.ci.sr)
 export(ncc.ints)
 export(resi.glm)
@@ -17,9 +19,12 @@ importFrom(lmtest,waldtest)
 importFrom(pracma,sqrtm)
 importFrom(sandwich,vcovHC)
 importFrom(stats,as.formula)
+importFrom(stats,constrOptim)
 importFrom(stats,lm)
 importFrom(stats,pchisq)
+importFrom(stats,pt)
 importFrom(stats,qchisq)
+importFrom(stats,qnorm)
 importFrom(stats,rgamma)
 importFrom(stats,rnorm)
 importFrom(stats,uniroot)
