--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,18 @@ Description: Tools to summarize model output using a robust effect size index. T
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Collate: 
+  'anoes.lm.R'
+  'boot.ci.R'
+  'esSim.R'
+  'nccd.R'
+  'resi.R'
+  'S.R'
 Imports:
   lmtest,
   pracma,
   sandwich
 Suggests:
   testthat
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
+
