--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Robust Effect Size Index (RESI) Estimation
 Version: 0.1.2
 Authors@R: 
-  c(person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut', 'cre')),
-    person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut', 'cre')))
+  c(person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut', 'cre')),
+    person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut')))
 Description: Tools to summarize model output using a robust effect size index. The index is introduced in Vandekar, Rao, \& Blume (2020).
 License: GPL-3
 Encoding: UTF-8
