--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,17 +19,21 @@ export(resi.lm)
 export(resi.waldtest)
 export(simFunc)
 export(simSetup)
+importFrom(car,Anova)
 importFrom(lmtest,coeftest)
 importFrom(lmtest,waldtest)
 importFrom(pracma,sqrtm)
 importFrom(sandwich,vcovHC)
 importFrom(stats,as.formula)
-importFrom(stats,coefficients)
+importFrom(stats,coef)
 importFrom(stats,constrOptim)
+importFrom(stats,formula)
+importFrom(stats,glm)
 importFrom(stats,hatvalues)
 importFrom(stats,lm)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
+importFrom(stats,predict)
 importFrom(stats,pt)
 importFrom(stats,qchisq)
 importFrom(stats,qnorm)
@@ -38,4 +42,4 @@ importFrom(stats,residuals)
 importFrom(stats,rgamma)
 importFrom(stats,rnorm)
 importFrom(stats,uniroot)
-importFrom(stats,update)
+importFrom(stats,vcov)
