--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(F)
 export(Finv)
 export(S2d)
 export(anoes)
-export(boot.ci)
+export(boot.ci.glm)
 export(chisq2S)
 export(f2S)
 export(lamfind)
