--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,4 +42,5 @@ importFrom(stats,residuals)
 importFrom(stats,rgamma)
 importFrom(stats,rnorm)
 importFrom(stats,uniroot)
+importFrom(stats,update)
 importFrom(stats,vcov)
