--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(resi.lm)
 export(resi.waldtest)
 export(simFunc)
 export(simSetup)
+export(ess.lme)
+export(ess.geeglm)
 importFrom(lmtest,coeftest)
 importFrom(lmtest,waldtest)
 importFrom(pracma,sqrtm)
@@ -39,3 +41,5 @@ importFrom(stats,rgamma)
 importFrom(stats,rnorm)
 importFrom(stats,uniroot)
 importFrom(stats,update)
+importFrom(stats,glm)
+importFrom(clubSandwich, vcovCR)
