--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,3 +43,4 @@ importFrom(stats,uniroot)
 importFrom(stats,update)
 importFrom(stats,glm)
 importFrom(clubSandwich, vcovCR)
+importFrom(mvtnorm, rmvnorm)
