added nlme, geepack

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,3 +44,5 @@ importFrom(stats,update)
 importFrom(stats,glm)
 importFrom(clubSandwich, vcovCR)
 importFrom(mvtnorm, rmvnorm)
+importFrom(nlme, lme)
+importFrom(geepack, geeglm)
