--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Imports:
   sandwich,
   parallel,
   clubSandwich,
-  mvtnorm
+  mvtnorm,
+  geepack,
+  nlme
 Suggests:
   testthat
 RoxygenNote: 7.1.1
