--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,11 @@ export(simFunc)
 export(simSetup)
 export(ess.lme)
 export(ess.geeglm)
+export(boot.samp)
+export(chisq2Ssq)
+export(ARMtx)
+export(sim_data_cont)
+
 importFrom(lmtest,coeftest)
 importFrom(lmtest,waldtest)
 importFrom(pracma,sqrtm)
