--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(boot.ci.glm)
 export(boot.samp)
 export(chisq2S)
 export(chisq2Ssq)
+export(ess)
 export(f2S)
 export(lamfind)
 export(ncc.ci.central)
