--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(ncf.ci)
 export(resi)
 export(simFunc)
 export(simSetup)
+export(sim_data_cont)
 importFrom(lmtest,coeftest)
 importFrom(lmtest,waldtest)
 importFrom(pracma,sqrtm)
