--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,15 +14,13 @@ export(ncc.ci.mdr)
 export(ncc.ci.sr)
 export(ncc.ints)
 export(ncf.ci)
-export(resi.glm)
-export(resi.lm)
-export(resi.waldtest)
 export(simFunc)
 export(simSetup)
+importFrom(aod,wald.test)
 importFrom(car,Anova)
-importFrom(lmtest,coeftest)
 importFrom(lmtest,waldtest)
 importFrom(pracma,sqrtm)
+importFrom(regtools,nlshc)
 importFrom(sandwich,vcovHC)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
@@ -34,7 +32,6 @@ importFrom(stats,lm)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
 importFrom(stats,predict)
-importFrom(stats,pt)
 importFrom(stats,qchisq)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
