udpate function `ncc.ci()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,17 +21,15 @@ export(chisq2S)
 export(chisq2Ssq)
 export(ess)
 export(f2S)
-export(lamfind)
+export(lamfind_chisq)
+export(ncc.ci)
 export(ncc.ci.central)
-export(ncc.ci.mdb)
-export(ncc.ci.mdr)
-export(ncc.ci.sr)
-export(ncc.ints)
 export(ncf.ci)
 export(resi)
 export(simFunc)
 export(simSetup)
 export(sim_data_cont)
+export(sim_data_cs_binary)
 importFrom(lmtest,coeftest)
 importFrom(lmtest,waldtest)
 importFrom(pracma,sqrtm)
