--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,14 +11,13 @@ Encoding: UTF-8
 LazyData: true
 Collate: 
   'internal_functions.R'
-  'boot.ci.R'
   'esSim.R'
   'nccd.R'
   'ncf.R'
+  'calc_resi.R'
   'resi.R'
   'S.R'
   'ess.R'
-  'anoes.R'
   'simulation.R'
 Imports:
   lmtest,
