--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(lamfind_chisq)
 export(ncc.ci)
 export(ncc.ci.central)
 export(ncf.ci)
+export(resi)
 export(simFunc)
 export(simSetup)
 export(sim_data_cont)
