export `print.resi`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(calc_resi,lm)
 S3method(calc_resi,lme)
 S3method(ess,geeglm)
 S3method(ess,lme)
+S3method(print,resi)
 S3method(resi,geeglm)
 S3method(resi,lm)
 S3method(resi,lme)
