--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,12 @@ export(ncc.ci.mdr)
 export(ncc.ci.sr)
 export(ncc.ints)
 export(ncf.ci)
+export(resi)
+export(resi.pe)
 export(simFunc)
 export(simSetup)
+export(t2S)
+export(z2S)
 importFrom(aod,wald.test)
 importFrom(car,Anova)
 importFrom(lmtest,waldtest)
