--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,9 @@ Imports:
     pracma,
     sandwich,
     parallel,
-    car
+    car,
+    aod,
+    regtools
 Suggests:
   testthat
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
