--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: Robust Effect Size Index (RESI) Estimation
 Version: 0.1.2
 Authors@R: 
   c(person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut', 'cre')),
-    person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut')))
+    person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut')),
+    person('Megan', 'Jones', email='megan.n.taylor@vanderbilt.edu', role=c('aut')))
 Description: Tools to summarize model output using a robust effect size index. The index is introduced in Vandekar, Rao, \& Blume (2020).
 License: GPL-3
 Encoding: UTF-8
@@ -15,8 +16,11 @@ Collate:
   'nccd.R'
   'ncf.R'
   'S.R'
-  'summary.anoes.R'
+  'summary.resi.R'
   'anoes.R'
+  'resi.R'
+  'resi.pe.R'
+  'Anova.resi.R'
 Imports:
     lmtest,
     pracma,
