--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,19 +5,19 @@ S3method(ess,lme)
 S3method(print,resi)
 S3method(resi,default)
 S3method(resi,geeglm)
-S3method(resi,hurdle)
 S3method(resi,lme)
 S3method(resi,nls)
+S3method(resi,zeroinfl)
 S3method(resi_pe,coxph)
 S3method(resi_pe,default)
 S3method(resi_pe,gee)
 S3method(resi_pe,geeglm)
 S3method(resi_pe,glm)
-S3method(resi_pe,hurdle)
 S3method(resi_pe,lm)
 S3method(resi_pe,lme)
 S3method(resi_pe,nls)
 S3method(resi_pe,survreg)
+S3method(resi_pe,zeroinfl)
 export(S2d)
 export(bayes.samp)
 export(boot.ci)
