--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(calc_resi,geeglm)
 S3method(calc_resi,lm)
 S3method(calc_resi,lme)
+S3method(calc_resi,lmerMod)
 S3method(ess,geeglm)
 S3method(ess,lme)
 S3method(print,resi)
