--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ S3method(Anova,resi)
 S3method(ess,geeglm)
 S3method(ess,lme)
 S3method(print,resi)
+S3method(print,summary.resi)
 S3method(resi,default)
+S3method(resi,gee)
 S3method(resi,geeglm)
 S3method(resi,hurdle)
 S3method(resi,lme)
