--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ S3method(calc_resi,lme)
 S3method(calc_resi,lmerMod)
 S3method(ess,geeglm)
 S3method(ess,lme)
+S3method(ess,lmerMod)
 S3method(print,resi)
 S3method(resi,geeglm)
 S3method(resi,lm)
 S3method(resi,lme)
+S3method(resi,lmerMod)
 export(F)
 export(Finv)
 export(S2d)
