--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,18 @@
 S3method(Anova,resi)
 S3method(ess,geeglm)
 S3method(ess,lme)
+S3method(plot,resi)
+S3method(plot,summary.resi)
 S3method(print,resi)
 S3method(print,summary.resi)
+S3method(resi,coxph)
 S3method(resi,default)
 S3method(resi,gee)
 S3method(resi,geeglm)
 S3method(resi,hurdle)
 S3method(resi,lme)
 S3method(resi,nls)
+S3method(resi,survreg)
 S3method(resi,zeroinfl)
 S3method(resi_pe,coxph)
 S3method(resi_pe,default)
