--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(Anova,resi)
 S3method(ess,geeglm)
 S3method(ess,lme)
+S3method(plot,anova_resi)
 S3method(plot,resi)
 S3method(plot,summary.resi)
 S3method(print,resi)
@@ -45,18 +46,29 @@ export(z2S)
 importFrom(aod,wald.test)
 importFrom(car,Anova)
 importFrom(clubSandwich,vcovCR)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,lines)
 importFrom(lmtest,waldtest)
 importFrom(mvtnorm,rmvnorm)
 importFrom(nlme,getGroups)
 importFrom(regtools,nlshc)
 importFrom(sandwich,vcovHC)
+importFrom(stats,anova)
+importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,formula)
 importFrom(stats,glm)
 importFrom(stats,hatvalues)
+importFrom(stats,nobs)
+importFrom(stats,pchisq)
 importFrom(stats,pf)
 importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,rbinom)
 importFrom(stats,residuals)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stats,update)
 importFrom(stats,vcov)
+importFrom(utils,capture.output)
