added other conversions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,14 +29,19 @@ S3method(resi_pe,nls)
 S3method(resi_pe,survreg)
 S3method(resi_pe,zeroinfl)
 S3method(summary,resi)
+export(Rsq2S)
+export(S2Rsq)
 export(S2d)
+export(S2fsq)
 export(bayes.samp)
 export(boot.ci)
 export(boot.samp)
 export(chisq2S)
 export(chisq2Ssq)
+export(d2S)
 export(ess)
 export(f2S)
+export(fsq2S)
 export(resi)
 export(resi_pe)
 export(sim_data_cont)
