--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,8 +33,13 @@ Imports:
     regtools,
     sandwich
 Suggests:
-  splines,
-  testthat
+    gee,
+    geepack,
+    pscl,
+    splines,
+    survival,
+    testthat (>= 3.0.0)
 RoxygenNote: 7.2.0
 Depends: 
     R (>= 2.10)
+Config/testthat/edition: 3
