--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,6 @@
 
 S3method(Anova,resi)
 S3method(anova,resi)
-S3method(ess,geeglm)
-S3method(ess,lme)
-S3method(ess,lmerMod)
 S3method(plot,anova_resi)
 S3method(plot,resi)
 S3method(plot,summary.resi)
@@ -43,7 +40,6 @@ export(boot.samp)
 export(chisq2S)
 export(chisq2Ssq)
 export(d2S)
-export(ess)
 export(f2S)
 export(fsq2S)
 export(resi)
@@ -51,13 +47,11 @@ export(resi_pe)
 export(t2S)
 export(z2S)
 importFrom(aod,wald.test)
-importFrom(buildmer,remove.terms)
 importFrom(car,Anova)
 importFrom(clubSandwich,vcovCR)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,lines)
-importFrom(lme4,findbars)
 importFrom(lmtest,waldtest)
 importFrom(nlme,getGroups)
 importFrom(regtools,nlshc)
@@ -65,6 +59,7 @@ importFrom(sandwich,vcovHC)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
+importFrom(stats,df.residual)
 importFrom(stats,formula)
 importFrom(stats,glm)
 importFrom(stats,hatvalues)
