--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,9 @@ export(fsq2S)
 export(resi)
 export(resi_pe)
 export(t2S)
+export(t2S_alt)
 export(z2S)
+export(z2S_alt)
 importFrom(aod,wald.test)
 importFrom(car,Anova)
 importFrom(clubSandwich,vcovCR)
