--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RESI
 Type: Package
 Title: Robust Effect Size Index (RESI) Estimation
-Version: 0.1.2
+Version: 1.0.0
 Authors@R: 
   c(person('Megan', 'Jones', email='megan.n.taylor@vanderbilt.edu', role=c('aut', 'cre')),
   person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut')),
@@ -11,13 +11,26 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Collate: 
-  'boot.ci.R'
   'internal_functions.R'
   'summary.resi.R'
   'resi.R'
   'resi_pe.R'
   'Anova.resi.R'
   'data.R'
+  'chisq2S.R'
+  'f2S.R'
+  't2S.R'
+  't2S_alt.R'
+  'z2S.R'
+  'z2S_alt.R'
+  'Rsq2S.R'
+  'S2Rsq.R'
+  'S2d.R'
+  'S2fsq.R'
+  'd2S.R'
+  'fsq2S.R'
+  'plot.R'
+  'print.R'
 Imports:
     aod,
     buildmer,
