--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ S3method(resi,coxph)
 S3method(resi,default)
 S3method(resi,gee)
 S3method(resi,geeglm)
+S3method(resi,glm)
 S3method(resi,hurdle)
+S3method(resi,lm)
 S3method(resi,lme)
 S3method(resi,lmerMod)
 S3method(resi,nls)
@@ -34,11 +36,7 @@ export(Rsq2S)
 export(S2Rsq)
 export(S2d)
 export(S2fsq)
-export(bayes.samp)
-export(boot.ci)
-export(boot.samp)
 export(chisq2S)
-export(chisq2Ssq)
 export(d2S)
 export(f2S)
 export(fsq2S)
