--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: RESI
 Type: Package
 Title: Robust Effect Size Index (RESI) Estimation
-Version: 1.0.4
+Version: 1.0.5
 Authors@R: 
   c(person('Megan', 'Jones', email='megan.n.taylor@vanderbilt.edu', role=c('aut', 'cre')),
   person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut')),
   person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut')))
-Description: Tools to summarize model output using a robust effect size index. The index is introduced in Vandekar, Rao, \& Blume (2020).
+Description: Summarize model output using a robust effect size index. The index is introduced in Vandekar, Rao, & Blume (2020) <doi:10.1007/s11336-020-09698-2>.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
