--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ S3method(resi,geeglm)
 S3method(resi,lm)
 S3method(resi,lme)
 S3method(resi,lmerMod)
+export(AR1_str)
+export(AR1_to_comp)
+export(ARMtx)
 export(F)
 export(Finv)
 export(S2d)
@@ -21,6 +24,8 @@ export(boot.samp)
 export(calc_resi)
 export(chisq2S)
 export(chisq2Ssq)
+export(comp_str)
+export(comp_to_AR1)
 export(ess)
 export(f2S)
 export(lamfind_chisq)
