--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,8 @@ export(simFunc)
 export(simSetup)
 export(sim_data_cont)
 export(sim_data_cs_binary)
+export(t2S)
+export(z2S)
 importFrom(aod,wald.test)
 importFrom(car,Anova)
 importFrom(clubSandwich,vcovCR)
