--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(resi_pe,nls)
 S3method(resi_pe,survreg)
 S3method(resi_pe,zeroinfl)
 S3method(summary,resi)
+export(ARMtx)
 export(Rsq2S)
 export(S2Rsq)
 export(S2d)
@@ -42,6 +43,7 @@ export(f2S)
 export(fsq2S)
 export(resi)
 export(resi_pe)
+export(sim_data_cont)
 export(t2S)
 export(t2S_alt)
 export(z2S)
