--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,12 +32,16 @@ S3method(resi_pe,nls)
 S3method(resi_pe,survreg)
 S3method(resi_pe,zeroinfl)
 S3method(summary,resi)
+export(AR1_str)
+export(AR1_to_comp)
 export(ARMtx)
 export(Rsq2S)
 export(S2Rsq)
 export(S2d)
 export(S2fsq)
 export(chisq2S)
+export(comp_str)
+export(comp_to_AR1)
 export(d2S)
 export(f2S)
 export(fsq2S)
