export `boot.samp`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(Rsq2S)
 export(S2Rsq)
 export(S2d)
 export(S2fsq)
+export(boot.samp)
 export(chisq2S)
 export(comp_str)
 export(comp_to_AR1)
