Changed summary method name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ S3method(Anova,resi)
 S3method(anova,resi)
 S3method(plot,anova_resi)
 S3method(plot,resi)
-S3method(plot,summary.resi)
+S3method(plot,summary_resi)
 S3method(print,resi)
-S3method(print,summary.resi)
+S3method(print,summary_resi)
 S3method(resi,coxph)
 S3method(resi,default)
 S3method(resi,gee)
