updates for CRAN update submission

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ importFrom(stats,df.residual)
 importFrom(stats,formula)
 importFrom(stats,glm)
 importFrom(stats,hatvalues)
+importFrom(stats,lm)
 importFrom(stats,nobs)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
