--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RESI
 Type: Package
 Title: Robust Effect Size Index (RESI) Estimation
-Version: 1.0.5
+Version: 1.1.0
 Authors@R: 
   c(person('Megan', 'Jones', email='megan.n.taylor@vanderbilt.edu', role=c('aut', 'cre')),
   person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut')),
@@ -48,8 +48,9 @@ Suggests:
     rmarkdown,
     splines,
     survival,
+    tibble,
     testthat (>= 3.0.0)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
 Config/testthat/edition: 3
