--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
   c(person('Megan', 'Jones', email='megan.n.taylor@vanderbilt.edu', role=c('aut', 'cre')),
   person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut')),
   person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut')))
-Description: Summarize model output using a robust effect size index. The index is introduced in Vandekar, Rao, & Blume (2020) <doi:10.1007/s11336-020-09698-2>.
+Description: Summarize model output using a robust effect size index. The index is introduced in Vandekar, Tao, & Blume (2020) <doi:10.1007/s11336-020-09698-2>.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
