--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,18 @@ S3method(resi,lmerMod)
 S3method(resi,nls)
 S3method(resi,survreg)
 S3method(resi,zeroinfl)
+S3method(resi_boot,coxph)
+S3method(resi_boot,default)
+S3method(resi_boot,gee)
+S3method(resi_boot,geeglm)
+S3method(resi_boot,glm)
+S3method(resi_boot,hurdle)
+S3method(resi_boot,lm)
+S3method(resi_boot,lme)
+S3method(resi_boot,lmerMod)
+S3method(resi_boot,nls)
+S3method(resi_boot,survreg)
+S3method(resi_boot,zeroinfl)
 S3method(resi_pe,coxph)
 S3method(resi_pe,default)
 S3method(resi_pe,gee)
@@ -42,6 +54,7 @@ export(f2S)
 export(fsq2S)
 export(omnibus)
 export(resi)
+export(resi_boot)
 export(resi_pe)
 export(t2S)
 export(t2S_alt)
