updated resi to work with boot package (cross sectional models only right now)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(t2S_alt)
 export(z2S)
 export(z2S_alt)
 importFrom(aod,wald.test)
+importFrom(boot,boot)
 importFrom(car,Anova)
 importFrom(clubSandwich,vcovCR)
 importFrom(graphics,abline)
