--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,13 @@
 
 S3method(Anova,resi)
 S3method(anova,resi)
+S3method(ggplot,anova_resi)
+S3method(ggplot,resi)
+S3method(ggplot,summary_resi)
 S3method(plot,anova_resi)
 S3method(plot,resi)
 S3method(plot,summary_resi)
+S3method(print,omnibus_resi)
 S3method(print,resi)
 S3method(print,summary_resi)
 S3method(resi,coxph)
@@ -44,9 +48,8 @@ export(omnibus)
 export(resi)
 export(resi_pe)
 export(t2S)
-export(t2S_alt)
 export(z2S)
-export(z2S_alt)
+import(ggplot2)
 importFrom(aod,wald.test)
 importFrom(boot,boot)
 importFrom(car,Anova)
