--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,8 @@ importFrom(clubSandwich,vcovCR)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,strwidth)
 importFrom(lmtest,waldtest)
 importFrom(nlme,getGroups)
 importFrom(regtools,nlshc)
@@ -81,3 +83,4 @@ importFrom(stats,runif)
 importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(utils,capture.output)
+importFrom(utils,methods)
