Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,3 +56,6 @@ RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
 Config/testthat/edition: 3
+URL: https://statimagcoll.github.io/RESI/, https://github.com/statimagcoll/RESI
+VignetteBuilder: knitr
+BugReports: https://github.com/statimagcoll/RESI/issues
