--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,24 +4,31 @@ template:
   bootstrap: 5
   bootswatch: flatly
   theme: breeze-light
-
 navbar:
   structure:
-    left:  [articles, reference, tutorials, news, comingsoon]
-    right: [search, github]
+    left:
+    - articles
+    - reference
+    - tutorials
+    - news
+    - comingsoon
+    right:
+    - search
+    - github
   components:
     comingsoon:
       text: Coming Soon
       href: cs.html
-
 reference:
 - title: Model-based functions
-  desc: Use these functions on fitted models to obtain RESI estimates and confidence intervals.
+  desc: Use these functions on fitted models to obtain RESI estimates and confidence
+    intervals.
 - contents:
   - resi
   - resi_pe
 - title: Conversion functions
-  desc: Manual functions for converting test statistics to RESI estimates and converting RESI estimates to and from other effect size measures.
+  desc: Manual functions for converting test statistics to RESI estimates and converting
+    RESI estimates to and from other effect size measures.
 - contents:
   - chisq2S
   - d2S
@@ -45,7 +52,6 @@ reference:
 - contents:
   - depression
   - insurance
-
 home:
   links:
   - text: Suggest a feature
