fix coming soon button

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,7 +12,7 @@ home:
   title: "RESI: Robust Effect Size Inference in R"
   description: "Summarize model output using a robust effect size index."
   links:
-  - text: Suggest a feature
+  - text: 💡 Suggest a feature
     href: https://github.com/statimagcoll/RESI/discussions/27
   - text: 📦 GitHub Repository
     href: https://github.com/statimagcoll/RESI
@@ -34,7 +34,7 @@ navbar:
     comingsoon:
       text: Coming Soon
       contents:
-        - cs.html
+        - docs/cs.html
 reference:
 - title: Model-based functions
   desc: Use these functions on fitted models to obtain RESI estimates and confidence
