--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,6 +11,8 @@ description: "Summarize model output using a robust effect size index."
 home:
   title: "RESI: Robust Effect Size Inference in R"
   description: "Summarize model output using a robust effect size index."
+  meta:
+    google-site-verification: "GL_SDs5P9U1yZ8h0bRRUU_XoNqyfnZptfOp9bIxEbsk"
   links:
   - text: 💡 Suggest a feature
     href: https://github.com/statimagcoll/RESI/discussions/27
@@ -32,9 +34,9 @@ navbar:
     - github
   components:
     comingsoon:
-      text: Coming Soon
-      contents:
-        - docs/cs.html
+      text: "Coming Soon"
+      href: cs.html
+
 reference:
 - title: Model-based functions
   desc: Use these functions on fitted models to obtain RESI estimates and confidence
@@ -71,5 +73,5 @@ reference:
 
 include:
   - docs/google3f0bafd3c82d41f6.html
-
+  - docs/cs.html
 
