add JSS citation and rhub check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,10 @@ S3method(resi_pe,zeroinfl)
 S3method(summary,resi)
 export(Rsq2S)
 export(S2Rsq)
+export(S2chisq)
 export(S2d)
 export(S2fsq)
+export(S2z)
 export(chisq2S)
 export(d2S)
 export(f2S)
