--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: RESI
 Type: Package
 Title: Robust Effect Size Index (RESI) Estimation
-Version: 1.2.4
+Version: 1.3.0
 Authors@R: 
   c(person('Megan', 'Jones', email='megan.n.taylor@vanderbilt.edu', role=c('aut', 'cre')),
   person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut')),
   person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut')))
-Description: Summarize model output using a robust effect size index. The index is introduced in Vandekar, Tao, & Blume (2020) <doi:10.1007/s11336-020-09698-2>.
+Description: Summarize model output using a robust effect size index. The index is introduced in Vandekar, Tao, & Blume (2020, <doi:10.1007/s11336-020-09698-2>). Software paper available at <doi:10.18637/jss.v112.i03>.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -54,7 +54,7 @@ Suggests:
     survival,
     tibble,
     testthat (>= 3.0.0)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 Depends: 
     R (>= 2.10)
 Config/testthat/edition: 3
