--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: RESI
 Type: Package
 Title: Robust Effect Size Index (RESI) Estimation
-Version: 1.3.0
+Version: 1.3.0.9999
 Authors@R: 
   c(person('Megan', 'Jones', email='megan.n.taylor@vanderbilt.edu', role=c('aut', 'cre')),
   person('Kaidi', 'Kang', email = 'kaidi.kang@vanderbilt.edu', role = c('aut')),
-  person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut')))
+  person('Simon', 'Vandekar', email='simon.vandekar@vanderbilt.edu', role=c('aut')),
+  person('Gina', 'Yu', email='gina.l.yu@vanderbilt.edu', role=c('ctb')),
+  person('Xinyu', 'Zhang', email='xinyu.zhang@vanderbilt.edu', role=c('ctb')))
 Description: Summarize model output using a robust effect size index. The index is introduced in Vandekar, Tao, & Blume (2020, <doi:10.1007/s11336-020-09698-2>). Software paper available at <doi:10.18637/jss.v112.i03>.
 License: GPL-3
 Encoding: UTF-8
@@ -45,9 +47,11 @@ Imports:
 Suggests:
     gee,
     geepack,
+    glmmTMB,
     knitr,
     lme4,
     pscl,
+    R.rsp,
     regtools,
     rmarkdown,
     splines,
@@ -59,5 +63,5 @@ Depends:
     R (>= 2.10)
 Config/testthat/edition: 3
 URL: https://statimagcoll.github.io/RESI/, https://github.com/statimagcoll/RESI
-VignetteBuilder: knitr
+VignetteBuilder: R.rsp
 BugReports: https://github.com/statimagcoll/RESI/issues
