--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ S3method(resi,survreg)
 S3method(resi,zeroinfl)
 S3method(resi_pe,coxph)
 S3method(resi_pe,default)
+S3method(resi_pe,emmGrid)
 S3method(resi_pe,gee)
 S3method(resi_pe,geeglm)
 S3method(resi_pe,glm)
@@ -76,6 +77,7 @@ importFrom(stats,formula)
 importFrom(stats,glm)
 importFrom(stats,hatvalues)
 importFrom(stats,lm)
+importFrom(stats,model.frame)
 importFrom(stats,nobs)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
