--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,9 +3,9 @@ pkgdown: 2.0.9
 pkgdown_sha: ~
 articles:
   RESI: RESI.html
-last_built: 2025-03-23T13:18Z
+  RESI_paper: RESI_paper.html
+last_built: 2025-07-25T16:01Z
 urls:
   reference: https://statimagcoll.github.io/RESI/reference
   article: https://statimagcoll.github.io/RESI/articles
-include:
-  - google6a873f379e6f09bc.html
+
